@@ -29,6 +29,8 @@ FusionForge-5.1:
 * Reorganised, modular Apache configuration (Roland Mas)
 * New User Widget : documents monitoring (Capgemini)
 * RPM packages for Red Hat (and derived) distributions
+* New extratabs iframe option to allow embeding another site using an
+  iframe (Alcatel-Lucent)
 
 FusionForge-5.0.2:
 * Maintenance release, bugfixes mostly.
